5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1664_2968.log
== TEST (2019-04-16 10:32:49) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper=="L"):
	print(round((l*y)+z,2))
else:
	print(round((s*y)+z,2))

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:21) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper== L):
	print(round((l*y+z,2))
else:
	print(round(s*y+z,2))

-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:57) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper== L):
	print(round(l*y+z,2))
else:
	print(round(s*y+z,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x.upper== L):
NameError: name 'L' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:23) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper== "L"):
	print(round(l*y+z,2))
else:
	print(round(s*y+z,2))

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:42) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper == "L"):
	print(round(l*y+r*z,2))
else:
	print(round(s*y+r*z,2))

-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:44) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper == "L"):
	print(round((l*y)+(r*z),2))
else:
	print(round((s*y)+(r*z),2))

-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:42:19) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper == "L"):
	print(round(l*y+r*z,2))
else:
	print(round(s*y+r*z))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:33) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper == "L"):
	total= (l*y+r*z)
else:
	total= (s*y+r*z)
print(round(total,2))

-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:53) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper() == "L"):
	total= (l*y+r*z)
else:
	total= (s*y+r*z)
print(round(total,2))

-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:46:28) 
-- CODE:
x=input("L ou S")
y=int(input("quantidade de salgado ou lanches: "))
z=int(input("quantidade de refrigerante: "))
l=5.00
s=3.50
r=4.0

if(x.upper() == "L"):
	total= (l*y+r*z)
else:
	total= (s*y+r*z)
print(round(total,2))

-- EXECUTION TIME:
0.130468
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
58.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
